`v1.2.0`
* Added Different types of HTTP Methods.
